--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
-<div class="navbar">
-  <div class="tabs">
+<div class="navbar1">
+  <div class="tabs vertical-nav">
     <div class="tab">
       <img src="https://static.thenounproject.com/png/2175990-200.png" alt="friends">
       <p>Friends</p>
@@ -30,6 +30,30 @@
     <div class="tab">
       <img src="https://static-00.iconduck.com/assets.00/logout-icon-2048x2048-libuexip.png" alt="logout">
       <p>Logout</p>
+    </div>
+  </div>
+</div>
+
+<div class="navbar2">
+  <div class="tabs horizontal-nav">
+    <div class="tab">
+      <img src="https://static.thenounproject.com/png/2175990-200.png" alt="friends">
+    </div>
+
+    <div class="tab">
+      <img src="https://www.iconpacks.net/icons/1/free-users-icon-267-thumb.png" alt="groups">
+    </div>
+
+    <div class="tab">
+      <img src="https://cdn-icons-png.flaticon.com/512/63/63747.png" alt="add">
+    </div>
+
+    <div class="tab">
+      <img src="https://cdn-icons-png.flaticon.com/512/768/768818.png" alt="recent activity">
+    </div>
+
+    <div class="tab">
+      <img src="https://cdn-icons-png.flaticon.com/512/666/666175.png" alt="profile">
     </div>
   </div>
 </div>
