--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,5 +1,3 @@
-<app-header />
-
 <nav>
   <app-sidebar />
 </nav>
@@ -21,3 +19,7 @@
     </mat-tab>
   </mat-tab-group>
 </main>
+
+<footer>
+  <app-sidebar />
+</footer>
